--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,10 +5,16 @@
     <item
         android:id="@+id/mi_refresh"
         android:icon="@drawable/ic_refresh"
+        android:iconTint="#ffff"
         android:title="Refresh"
         app:showAsAction="always" />
     <item
         android:id="@+id/mi_new_size"
         android:title="Chose New Size"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mi_custom"
+        android:title="Create custom game"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
